# cuPDLPx

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  check-clang-format.yml  clang-format-check.yml
docs/: C_API.md
include/: cupdlpx.h  cupdlpx_types.h  mps_parser.h
internal/: cusparse_compat.h  feasibility_polish.h  internal_types.h  preconditioner.h  presolve.h  solver.h  utils.h
python/: README.md
python/cupdlpx/: PDLP.py  __init__.py  model.py
python_bindings/: CMakeLists.txt  _core_bindings.cpp
src/: cli.c  cupdlpx.c  feasibility_polish.cu  feasibility_pump.cu  mps_parser.c  preconditioner.c  preconditioner.cu  presolve.c  solver.cu  spmv_backend.cu  utils.cu
test/: test_feasibility_polishing.py  test_infeasible_unbounded.py  test_interface.c  test_limit.py  test_matrix_formats.py  test_numerical.py  test_presolve.py  test_warm_start.py
